examples/test/testpolicy3340.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3340
  namespace: namespace468
spec:
  podSelector:
    matchLabels:
      key49: value47
      key9: value30
      key19: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key37: value26
      podSelector:
        matchLabels:
          key11: value23
          key22: value39
